<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="FirstName: "
            android:textColor="@android:color/background_dark"
            />
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/bluecolor"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/lastname_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="LastName: "
            android:textColor="@android:color/background_dark"
            />
        <TextView
            android:id="@+id/lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:textColor="@color/bluecolor"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="Gender: "
            android:textColor="@android:color/background_dark"
            />
        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/bluecolor"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/emailid_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="Email ID: "
            android:textColor="@android:color/background_dark"
            />
        <TextView
            android:id="@+id/emailid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/bluecolor"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/educationtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:text="@string/education"
        android:textColor="@android:color/black"
        />
    <TextView
        android:id="@+id/education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/bluecolor"
        android:textStyle="italic"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"

        >
    <Button
        android:id="@+id/viewprofile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/profileview"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#000000"
        android:gravity="center"
        />

    <Button
        android:id="@+id/lastfivepost"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/lastfiveposts"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#000000"
        android:layout_margin="8dp"
        />
    <Button
        android:id="@+id/viewgroups"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#000000"
        android:text="@string/groups"
        />
        </LinearLayout>
</LinearLayout>
